# blokus

./: .gitignore  CMakeLists.txt  README.md
board/: matrix.cpp  matrix.hpp  matrix.test.cpp  matrix.tpp
piece/: color.hpp  form.cpp  form.hpp  form.test.cpp  piece.hpp  polyomino.cpp  polyomino.hpp  polyomino.test.cpp
tools/: generate_on_n.cpp
utils/: boardSizeFinder.hpp  polyominoGenerator.cpp  polyominoGenerator.hpp  polyominoGenerator.test.cpp
